--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,14 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FIX-IT</title>
-
-    <!-- Google Maps Script
-   <script
-  src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_API_KEY%&libraries=places"
-  defer
-></script> -->
-
+    <title>FIXIT</title>
+       <link rel="icon" type="image/png" sizes="64x64" href="/FIXIT1.png">
   </head>
   <body>
     <div id="root"></div>
